0.7.11+
    fix horiz scroll on single-click mode auto-select #137
0.7.11  2012-08-15:
    added --no-saved-tabs, -n command line option to not load saved tabs #110
    --reuse-tab can be used in conjunction with other options
    File|Root Window opens current folder #116
    specifying --panel=N without a dir shows and focuses panel N
    handle network URLs on command line
    user manual Invocation updated
    added dependency libgtk2.0-bin [spacefm 0.7.10 with --disable-pixmaps]
    find-as-you-type search options #85
    rename dialog name selection UTF-8 compliant #127
    replace G_VALUE_INIT macro #126
    added file list Edit|Select By Pattern
    adjust parse url
    Show Output option should open on additional output after closure
    Remove Text Type Association popup note
    display file sizes and times in overwrite query
    file change detection blacklist non-block nfs fuse cifs smbfs ftpfs #129
    percent in path bar select by pattern
    fix hang on click on 5000+ selected files in list view
    clean udevil mount points on device removal, exit
    fix auto umount on eject
    fix icon view drag target #132
    added custom Protocol Handler setting to Path Bar context menu
    status bar show canonicalized current dir
    added Go|Real Path
    added user manual GUI|Path Bar
0.7.10  2012-07-25:
    added sort options #87 #37 #23
    completed russian translation ru.po
    smart size display for free space and tasks closes #115
    case insensitive sort detect all created files #119
    fix Skip All in overwrite query
    added configure option --disable-pixmaps to install icons to share/icons
    new icons for faenza theme by Goran Simovic
    G_VALUE_INIT undefined #126
    allow file change detection on aufs and devtmpfs
0.7.9   2012-07-13:
    new threading for tasks
    network filesystem lag issues improved
    no file change detection on non-block filesystems
    timeout size calc after 5 sec