@@ -1,8 +1,7 @@
 [Desktop Entry]
 Version=1.0
-Encoding=UTF-8
 _Name=SpaceFM File Search
-Categories=Application;Utility;GTK;
+Categories=Utility;GTK;
 Exec=spacefm --find-files %F
 Icon=spacefm-find
 StartupNotify=true
