@@ -1,5 +1,4 @@
 [Desktop Entry]
-Encoding=UTF-8
 _Name=SpaceFM Open Folder
 _Comment=Open folder
 TryExec=spacefm
