@@ -1,5 +1,6 @@
 0.7.11+
     fix horiz scroll on single-click mode auto-select #137
+    deprecated keys in spacefm desktop files #136
 0.7.11  2012-08-15:
     added --no-saved-tabs, -n command line option to not load saved tabs #110
     --reuse-tab can be used in conjunction with other options
